# nlb_assignment_2026

./: .env.example  AI_USAGE.md  README.md  REPORT.md  pyproject.toml
data/: companies.txt
data/kb/raw/: 09a7ee40a49743c79452dd73a03983da-5d9ffba2ba8c1009.html  09a7ee40a49743c79452dd73a03983da-f65c8d5cd12560d5.html  16419667-e36c93846f9664c2.html  1st-source-corp-147e3e0f51713f2a.html  2024-5c92c4e49e40d9ec.html  2024-68bab6343327bcef.html  2024-adf6829e8f17dca1.html  2024-b61a9a80ed09107d.html  2024-c115e2fb42bb95c3.html  2024-fa712f2034770419.html  2322088-2ac4041a23a03c13.html  2433360-42ba097eaf97a13a.html  2597054-749327e7177ed9d6.html  2770378-c1d885861088dd6a.html  38th-general-meeting-of-petrol-d.d.-ljubljana-7516121473483fec.html  5532461-cbba5665e3f77be0.html  5540204-87e085f9eef68c77.html  5540684-2289d53f8306b1a3.html  5548819-ab6b3cc0bd0f36e6.html  5551117-90021231ef7aea68.html  5552098-57b78a3aa09a424e.html  5999903-7b7a10d41132facb.html  5999904-864af2c8b6949513.html  5999938-ec21b26c2437b0a8.html  5999939-b6020229abc7d20f.html  5999940-24d97ea89e177463.html  5999941-0d9693de7a075dc4.html  5999942-cd19c44b7ca9b01d.html  (+342 more)
outputs/benchmark/: gen-i.json  nlb_group.json  petrol_group.json
src/company_research/: __init__.py  cli.py  config.py  extractors.py  facts.py  fetch.py  kb.py  llm.py  models.py  qa.py  ranking.py  researcher.py  safety.py  search.py
tests/: test_config.py  test_extraction.py  test_fetch.py  test_kb_qa.py  test_llm.py  test_ranking.py  test_researcher.py
tests/fixtures/: company_report.html  metrics.csv  search_results.json
