[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "company-research-assistant"
version = "0.1.0"
description = "Bounded open-web company research CLI with persisted evidence and cited JSON answers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "playwright>=1.45",
  "pypdf>=4.2",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
research = "company_research.cli:run_research_app"
ask = "company_research.cli:run_ask_app"
chat = "company_research.cli:run_chat_app"
company-research = "company_research.cli:run_main_app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/company_research"]

[tool.ruff]
line-length = 100
target-version = "py311"
